<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:key="language"
            app:title="@string/language_select"
            app:dialogTitle="@string/language_select"
            app:entries="@array/language_options"
            app:entryValues="@array/language_values"
            app:defaultValue="en"
            app:summary="%s" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/subtitle_settings">

        <!-- Відображення версії додатку -->
        <Preference
            app:key="app_version"
            app:summary="1.1.0"
            app:title="@string/app_version" />

        <!-- Відображення імені розробника -->
        <Preference
            app:key="developer_name"
            app:summary="Zoomer"
            app:title="@string/developer" />

        <!-- Посилання на відео -->
        <Preference
            app:key="youtube_link"
            app:summary="@string/youtube_header"
            app:title="@string/youtube_text" />

    </PreferenceCategory>

</PreferenceScreen>